Fix header navigation spacing issue on Safari

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -25,13 +25,13 @@
         flex-direction: row;
         align-items: center;
         padding: 16px 32px;
-        column-gap: 32px;
 
         h1 {
             font-size: 14px;
             line-height: 16px;
             font-weight: 700;
             text-transform: uppercase;
+            margin-right: 32px;
         }
         a {
             color: white;
@@ -40,6 +40,7 @@
             line-height: 16px;
             text-decoration: none;
             letter-spacing: 0.5px;
+            margin-right: 32px;
             // border-bottom: 4px solid white;
         }
     }
